--- a/app/views/client/profile/tickets.html.erb
+++ b/app/views/client/profile/tickets.html.erb
@@ -15,7 +15,12 @@
               <% @tickets_active.each do |ticket| %>
                 <div class="ticket ticket-1">
                   <div class="row">
-                    <div class="col-xs-12 col-md-3">
+                    <div class="col-xs-12 col-md-3 pull-right">
+                      <div class="cover" style="background-image: url(<%= ticket.event.event_pictures.first.try(:media, :thumb) %>);">
+                        <img src="<%= ticket.qr_code(:medium) %>" width="100%" />
+                      </div>
+                    </div>
+                    <div class="col-xs-12 col-md-3 mobile-hide">
                       <div class="event-date-lg">
                         <div class="month"><%= ticket.section.event_time.try(:strftime, "%b") %></div>
                         <div class="date"><%= ticket.section.event_time.try(:strftime, "%d") %></div>
@@ -53,11 +58,6 @@
                             </div>
                           </div>
                         </div>
-                      </div>
-                    </div>
-                    <div class="col-xs-12 col-md-3">
-                      <div class="cover" style="background-image: url(<%= ticket.event.event_pictures.first.try(:media, :thumb) %>);">
-                        <img src="<%= ticket.qr_code(:medium) %>" width="100%" />
                       </div>
                     </div>
                   </div>
