--- a/app/views/client/events/show.html.erb
+++ b/app/views/client/events/show.html.erb
@@ -34,7 +34,7 @@
       <div class="col-md-1"></div>
       <div class="col-xs-12 col-md-4">
         <button type="button" class="btn btn-block btn-daydash btn-daydash-lg btn-daydash-green-1" data-toggle="modal" data-target="#ticket-list-modal">
-          ซื้อตั๋ว - ฿<%= @section.price %>
+          ซื้อตั๋ว - <%= convert_to_currency(@section.price) %>
         </button>
         <div class="map-panel">
           <div id="google-map" data-lat="<%= @event.latitude %>" data-lng="<%= @event.longitude %>"></div>
@@ -106,7 +106,7 @@
               <% if section.ticket_availability? %>
               <td width="150" align="right">
                 <div class="ticket-meta" style="margin-top: 8px;">
-                  <span class="ticket-price">฿ <%= section.price %></span>
+                  <span class="ticket-price"><%= convert_to_currency section.price %></span>
                 </div>
               </td>
               <td width="150" align="right">
@@ -119,7 +119,7 @@
               <% else %>
               <td width="100" align="right">
                 <div class="ticket-meta" style="margin-top: 8px; color: #ccc;">
-                  <span class="ticket-price">฿ <%= section.price %></span>
+                  <span class="ticket-price"><%= convert_to_currency section.price %></span>
                 </div>
               </td>
               <td align="right" colspan="2">
@@ -139,4 +139,3 @@
     <% end %>
   </div>
 </div>
-
