--- a/app/views/client/profile/tickets.html.erb
+++ b/app/views/client/profile/tickets.html.erb
@@ -39,7 +39,7 @@
                             <div class="col-xs-6">
                               <div>
                                 <span class="ticket-type"><%= ticket.section.title %></span>
-                                <span class="ticket-price">฿ <%= ticket.to_price %></span>
+                                <span class="ticket-price"><%= convert_to_currency ticket.to_price %></span>
                               </div>
                             </div>
                             <div class="col-xs-6">
@@ -94,7 +94,7 @@
                             <div class="col-xs-6">
                               <div>
                                 <span class="ticket-type"><%= ticket.section.title %></span>
-                                <span class="ticket-price">฿ <%= ticket.to_price %></span>
+                                <span class="ticket-price"><%= convert_to_currency ticket.to_price %></span>
                               </div>
                             </div>
                             <div class="col-xs-6">
