--- a/app/views/organizer/events/edit.html.erb
+++ b/app/views/organizer/events/edit.html.erb
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-  $('body').attr('id', 'organizer-events-edit');
+  $('body').attr('id', 'organizer-events-edit').addClass('organizer-event-page');
   $('#organizer-nav #menu-event-list').addClass('active');
 </script>
 
