--- a/app/views/organizer/events/new.html.erb
+++ b/app/views/organizer/events/new.html.erb
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-  $('body').attr('id', 'organizer-events-new');
+  $('body').attr('id', 'organizer-events-new').addClass('organizer-event-page');
   $('#organizer-nav #menu-create-event').addClass('active');
 </script>
 
