--- a/app/views/organizer/events/orders.html.erb
+++ b/app/views/organizer/events/orders.html.erb
@@ -1,4 +1,4 @@
-<script>$('body').attr('id', 'organizer-event-orders');</script>
+<script>$('body').attr('id', 'organizer-event-orders').addClass('organizer-event-page');</script>
 
 <%= render partial: "organizer/parts/organizer-nav" %>
 <script>$('#organizer-nav #menu-event-list').addClass('active');</script>
