--- a/app/views/layouts_mailer/user/order.html.erb
+++ b/app/views/layouts_mailer/user/order.html.erb
@@ -22,7 +22,7 @@
                   <td valign="top" class="mcnTextContent" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;">
                     <p style="font-size: 24px; font-weight: 200; padding-top: 30px; padding-bottom: 15px; border-bottom: 1px solid black;">วิธีการชำระเงิน</p>
                     <p style="font-weight: 200;">
-                      1. เลือกโอนยอดเงิน 1,300 บาท ผ่านธนาคารที่คุณสะดวก
+                      1. เลือกโอนยอดเงิน <%= convert_to_currency @order.price %> บาท ผ่านธนาคารที่คุณสะดวก
                     </p>
                     <table width="100%">
                       <tbody>
