--- a/app/views/client/events/checkout.html.erb
+++ b/app/views/client/events/checkout.html.erb
@@ -43,7 +43,7 @@
                 <i class="icon icon-xs icon-waiting"></i>
                 <span class="color-daydash-red">
                   กรุณาทำการชำระเงินและแจ้งชำระเงินภายใน 60 นาทีค่ะ <br />
-                  (ชำระภายใน วันที่ <%= @order.expires_on %>)
+                  (ชำระภายใน วันที่ <%= @order.to_expires_on %>)
                 </span>
                 <p>หากพ้นเวลาดังกล่าว คำสั่งซื้อของคุณจะถูกยกเลิก และคุณจะต้องทำการสั่งซื้อใหม่อีกครั้ง</p>
               </li>
