--- a/app/assets/stylesheets/client/events.sass
+++ b/app/assets/stylesheets/client/events.sass
@@ -84,35 +84,48 @@ html, body
         &:hover, &:active, &:visited, &:link
           background: #19D4D6
           color: white
-    .user-dropdown
-      .user-profile-photo
-        width: 30px
-        height: 30px
-        border-radius: 50%
-        background-size: cover
-        background-position: center
-        background-repeat: no-repeat
-        background-color: #ccc
-        float: left
-      .user-name
-        display: inline-block
-        padding: 5px
-        padding-left: 15px
-        color: #444
-      .fa
-        color: #444
+  .user-profile-photo
+    width: 30px
+    height: 30px
+    border-radius: 50%
+    background-size: cover
+    background-position: center
+    background-repeat: no-repeat
+    background-color: #ccc
+    float: left
 
-      .dropdown-toggle
-        padding: 15px
-      .dropdown-menu
-        min-width: 200px
-        padding: 0px
-        li a
-          padding: 15px 20px
-          font-size: 14px
-          font-weight: 200
-          border-bottom: 1px solid #eee
+  .user-dropdown
+    .user-name
+      display: inline-block
+      padding: 5px
+      padding-left: 15px
+      color: #444
+    .fa
+      color: #444
+
+    .dropdown-toggle
+      padding: 15px
+    .dropdown-menu
+      min-width: 200px
+      padding: 0px
+      li a
+        padding: 15px 20px
+        font-size: 14px
+        font-weight: 200
+        border-bottom: 1px solid #eee
   @media (max-width: 767px)
+    .navbar-header
+      border-bottom: 1px solid #eee
+
+    .navbar-nav
+      margin: 0px -15px
+      
+      li
+        a
+          color: #444
+          text-align: center
+          border-bottom: 1px solid #eee
+
     .navbar-right
       border-bottom: 1px solid #eee
       
