--- a/app/assets/stylesheets/client/events.sass
+++ b/app/assets/stylesheets/client/events.sass
@@ -119,7 +119,7 @@ html, body
 
     .navbar-nav
       margin: 0px -15px
-      
+
       li
         a
           color: #444
@@ -210,6 +210,11 @@ html, body
   .cert-list
     margin-top: 50px
 
+  @media (max-width: 991px)
+
+    .col
+      margin-top: 40px
+
 #login-modal
   .modal-title
     text-align: center
@@ -236,7 +241,7 @@ html, body
 
 @media (max-width: 991px)
   #main
-    padding-bottom: 1400px
+    padding-bottom: 1200px
 
 a
   color: #00CFD1
