--- a/app/views/client/profile/tickets.html.erb
+++ b/app/views/client/profile/tickets.html.erb
@@ -127,7 +127,7 @@
               <div class="empty">
                 <i class="icon icon-lg icon-ticket"></i>
                 <h4 class="description">คุณยังไม่มีบัตรเข้าร่วมงานเลยค่ะ</h4>
-                <a class="btn btn-daydash btn-daydash-md btn-daydash-green-1" href="/">ค้นหากิจกรรมและอีเว้นท์ที่น่าสนใจ</a>
+                <a class="btn btn-daydash btn-daydash-md btn-daydash-green-1" href="/" target="_self">ค้นหากิจกรรมและอีเว้นท์ที่น่าสนใจ</a>
               </div>
 
             <% end %>
