### fix date time
- What I did
I've …

- How I did it
I've changed …

- Description for the changelog
…….

--- a/app/views/client/profile/orders.html.erb
+++ b/app/views/client/profile/orders.html.erb
@@ -19,7 +19,7 @@
                     เลขที่ออร์เดอร์: <strong><%= order.code %></strong>
                   </div>
                   <div class="col-xs-12 col-md-6 right">
-                    สั่งซื้อเมื่อ <span class="created-at" data-created-at="<%= order.created_at %>"><%= order.to_created_at %></span>
+                    สั่งซื้อเมื่อ <span data-created-at="<%= order.created_at %>"><%= order.to_created_at %></span>
                   </div>
                 </div>
                 <div class="row">
