--- a/app/assets/stylesheets/client/events.sass
+++ b/app/assets/stylesheets/client/events.sass
@@ -128,7 +128,7 @@ html, body
 
     .navbar-right
       border-bottom: 1px solid #eee
-      
+
   @media (min-width: 768px)
     .navbar-right
       > li
@@ -136,7 +136,7 @@ html, body
           padding: 20px
           font-size: 18px
 
-  @media (min-width: 768px) and (max-width: 991px)  
+  @media (min-width: 768px) and (max-width: 991px)
     .navbar
       .navbar-left
         display: none
@@ -150,13 +150,13 @@ html, body
             font-size: 14px
   @media (min-width: 1200px)
     .navbar
-      .navbar-left, .navbar-right
+      .navbar-left
         li
           a
             padding: 20px 15px
             font-size: 16px
 
-  
+
 #wrapper
   position: relative
   min-height: 100%
@@ -1176,7 +1176,7 @@ label
 
         .social-list
           padding-top: 5px
-          
+
           *
             vertical-align: text-top !important
 
